[package]
name = "pygui"
version = "0.1.0"
description = "A simple python gui library written in rust"
authors = ["Juici <juicy66173@gmail.com>"]
keywords = ["python", "window", "gui"]
homepage = "https://github.com/Juici/pygui"
repository = "https://github.com/Juici/pygui.git"
readme = "README.md"
license = "MIT"
publish = false

[dependencies]
piston_window = "0.77.0"
glfw = "*"

[dependencies.pistoncore-glfw_window]
git = "https://github.com/PistonDevelopers/glfw_window"

[dependencies.pyo3]
version = "0.2"
features = ["extension-module"]

[lib]
name = "pygui"
crate-type = ["cdylib"]